--- a/server/.env
+++ b/server/.env
@@ -1,4 +1,5 @@
 PORT=8747
 JWT_KEY="Sandhyas super key"
 ORIGIN="http://localhost:5173"
+NODE_ENV = "production"
 DATABSE_URL="mongodb+srv://sandhyarameshnaik12:UrK6iexZ8hGpQ6wD@cluster0.wu4bo.mongodb.net/chat-apps"
