--- a/server/package.json
+++ b/server/package.json
@@ -6,7 +6,10 @@
     "type": "module",
     "scripts": {
         "start": "node index.js",
-        "dev": "nodemon index.js"
+        "dev": "nodemon index.js",
+        "server": "nodemon index.js",
+        "build": "npm install --legacy--peer-deps  && npm install --legacy--peer-deps --prefix client && npm run build --prefix client"
+
     },
 
     "author": "Your Name",
