--- a/server/package.json
+++ b/server/package.json
@@ -8,7 +8,7 @@
         "start": "node index.js",
         "dev": "nodemon index.js",
         "server": "nodemon index.js",
-        "build": "npm install --legacy--peer-deps  && npm install --legacy--peer-deps --prefix client && npm run build --prefix client"
+        "build": "npm install  && npm install --prefix client && npm run build --prefix client"
 
     },
 
