--- a/server/package.json
+++ b/server/package.json
@@ -6,10 +6,7 @@
     "type": "module",
     "scripts": {
         "start": "node index.js",
-        "dev": "nodemon index.js",
-        "server": "nodemon index.js",
-        "build": "npm install  && npm install --prefix client && npm run build --prefix client"
-
+        "dev": "nodemon index.js"
     },
 
     "author": "Your Name",
