--- a/client/package.json
+++ b/client/package.json
@@ -3,14 +3,15 @@
     "private": true,
     "version": "0.0.0",
     "type": "module",
+
     "scripts": {
         "dev": "vite",
         "build": "vite build",
-        "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
-        "preview": "vite preview"
-
+        "serve": "vite preview"
     },
+
     "dependencies": {
+        "@heroicons/react": "^2.1.5",
         "@radix-ui/react-avatar": "^1.0.4",
         "@radix-ui/react-dialog": "^1.1.1",
         "@radix-ui/react-scroll-area": "^1.1.0",
