--- a/server/package.json
+++ b/server/package.json
@@ -4,9 +4,12 @@
     "description": "",
     "main": "index.js",
     "type": "module",
+
     "scripts": {
         "start": "node index.js",
-        "dev": "nodemon index.js"
+        "dev": "nodemon index.js",
+        "build": "npm install && npm install --prefix client && npm run build --prefix client"
+
     },
 
     "author": "Your Name",
